# hermes-agent

./: .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .hadolint.yaml  .mailmap  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.ur-pk.md  README.zh-CN.md  RELEASE_v0.13.0.md  RELEASE_v0.14.0.md  RELEASE_v0.15.0.md  RELEASE_v0.15.1.md  SECURITY.md  batch_runner.py  cli-config.yaml.example  cli.py  constraints-termux.txt  docker-compose.windows.yml  docker-compose.yml  flake.nix  hermes  hermes-already-has-routines.md  hermes-architecture.html  hermes_bootstrap.py  hermes_constants.py  hermes_logging.py  hermes_state.py  hermes_time.py  mcp_serve.py  mini_swe_runner.py  model_tools.py  package-lock.json  (+10 more)
.claude/: settings.local.json
.codegraph/: .gitignore
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.plans/: openai-api-server.md  streaming-support.md
Learning/: Learning.md  Readme.md  ai_funding_news_2026.txt  hermes-agent-evolution.md  process.md
acp_adapter/: __init__.py  __main__.py  auth.py  edit_approval.py  entry.py  events.py  permissions.py  provenance.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: __init__.py  account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  async_utils.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  billing_view.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  coding_context.py  context_compressor.py  context_engine.py  context_references.py  conversation_compression.py  conversation_loop.py  copilot_acp_client.py  credential_persistence.py  credential_pool.py  credential_sources.py  credits_tracker.py  curator.py  curator_backup.py  display.py  error_classifier.py  errors.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  gemini_schema.py  google_code_assist.py  google_oauth.py  i18n.py  image_gen_provider.py  (+62 more)
apps/bootstrap-installer/src-tauri/: Cargo.toml  build.rs  hermes-setup.manifest  tauri.conf.json
apps/bootstrap-installer/src-tauri/capabilities/: default.json
apps/bootstrap-installer/src-tauri/icons/: icon.icns
apps/bootstrap-installer/src-tauri/src/: bootstrap.rs  events.rs  install_script.rs  lib.rs  main.rs  paths.rs  powershell.rs  update.rs
cron/: __init__.py  blueprint_catalog.py  jobs.py  scheduler.py  scheduler_provider.py  suggestion_catalog.py  suggestions.py
datagen-config-examples/: example_browser_tasks.jsonl  trajectory_compression.yaml  web_research.yaml
docker/: SOUL.md  entrypoint.sh  hermes-exec-shim.sh  main-wrapper.sh  stage2-hook.sh
docs/: chronos-managed-cron-contract.md  rca-ssl-cacert-post-git-pull.md  relay-connector-contract.md
environments/: agent_loop.py  agentic_opd_env.py  hermes_base_env.py  tool_context.py
gateway/: __init__.py  authz_mixin.py  cgroup_cleanup.py  channel_directory.py  code_skew.py  config.py  delivery.py  display_config.py  drain_control.py  hooks.py  kanban_watchers.py  memory_monitor.py  message_timestamps.py  mirror.py  pairing.py  platform_registry.py  response_filters.py  restart.py  rich_sent_store.py  run.py  runtime_footer.py  scale_to_zero.py  session.py  session_context.py  shutdown_forensics.py  slash_access.py  slash_commands.py  status.py  sticker_cache.py  stream_consumer.py  stream_dispatch.py  stream_events.py  whatsapp_identity.py
hermes_cli/: __init__.py  _parser.py  _subprocess_compat.py  active_sessions.py  auth.py  auth_commands.py  azure_detect.py  backup.py  banner.py  blueprint_cmd.py  browser_connect.py  build_info.py  bundles.py  callbacks.py  checkpoints.py  claw.py  cli_agent_setup_mixin.py  cli_commands_mixin.py  cli_output.py  clipboard.py  codex_models.py  codex_runtime_plugin_migration.py  codex_runtime_switch.py  colors.py  commands.py  completion.py  config.py  container_boot.py  copilot_auth.py  cron.py  curator.py  curses_ui.py  dashboard_register.py  debug.py  default_soul.py  dep_ensure.py  dingtalk_auth.py  doctor.py  dump.py  env_loader.py  (+91 more)
locales/: af.yaml  de.yaml  en.yaml  es.yaml  fr.yaml  ga.yaml  hu.yaml  it.yaml  ja.yaml  ko.yaml  pt.yaml  ru.yaml  tr.yaml  uk.yaml  zh-hant.yaml  zh.yaml
nix/: checks.nix  configMergeScript.nix  desktop.nix  devShell.nix  hermes-agent.nix  lib.nix  nixosModules.nix  overlays.nix  packages.nix  python.nix  tui.nix  web.nix
optional-skills/: DESCRIPTION.md
plans/: gemini-oauth-provider.md
plugins/: __init__.py  plugin_utils.py
providers/: README.md  __init__.py  base.py
scripts/: LIVETEST_README.md  analyze_livetest.py  benchmark_browser_eval.py  build_model_catalog.py  build_skills_index.py  check-windows-footguns.py  check_subprocess_stdin.py  contributor_audit.py  discord-voice-doctor.py  docker_config_migrate.py  hermes-gateway  install.cmd  install.ps1  install.sh  install_psutil_android.py  keystroke_diagnostic.py  lint_diff.py  profile-tui.py  release.py  run_tests.sh  run_tests_parallel.py  sample_and_compress.py  setup_open_webui.sh  tool_search_livetest.py
tests/: conftest.py  run_interrupt_test.py  test_account_usage.py  test_assistant_ui_tap_compat.py  test_atomic_replace_symlinks.py  test_base_url_hostname.py  test_batch_runner_checkpoint.py  test_bitwarden_secrets.py  test_cli_file_drop.py  test_cli_manual_compress.py  test_cli_skin_integration.py  test_code_skew.py  test_ctx_halving_fix.py  test_dashboard_sidecar_close_on_disconnect.py  test_desktop_electron_pin.py  test_desktop_mac_entitlements.py  test_dispatch_session_id.py  test_docker_home_override_scripts.py  test_docker_stage2_browser_discovery.py  test_docker_webui_install_surface.py  test_dockerfile_tini_compat_shim.py  test_empty_model_fallback.py  test_empty_session_hygiene.py  test_env_loader_secret_sources.py  test_evidence_store.py  test_fast_safe_load.py  test_gateway_streaming_nested_config.py  test_get_tool_definitions_cache_isolation.py  test_hermes_bootstrap.py  test_hermes_constants.py  test_hermes_home_profile_warning.py  (+75 more)
(+4795 files in other folders)
